sventon change history
-----------------------------------------------------------------------------------------

[2002] Added: Feature #5343 - Toggleable paging in logs view.
[2001] Fixed: Bug #17851 - NPE during browse of repository.
[2000] Fixed: Bug #17852 - Does not work out-of-the-box on Jetty due to JSTL issue.

[1997] Release 2.5.0 (2011-01-09)
[1978] Fixed: Bug #17480 - 'Show file' fails when diff:ing two different files.
[1973] Fixed: Bug #17801 - BaseURL is not effective on the login screen.
[1972] Fixed: Bug #16271 - Some characters not allowed as search term.
[1971] Fixed: Bug #16068 - Repository paths not properly URL encoded.
[1842] Added: Feature #4561 - Rescan config files without restart.
[1752] Added: Upgraded SVNKit to version 1.3.4.
[1673] Fixed: Bug #17345 - 'Show Log' starts from HEAD instead of from current revision.

[1671] Release 2.1.6 (2010-07-05)
[1667] Added: Feature #5033 - Allow setting of MAX_CLAUSE_COUNT.
[1665] Added: Feature #4464 - Add a base URL config parameter.
[1662] Fixed: Bug #17263 - Error when clicking on links in recent changes view.

[1660] Release 2.1.5 (2010-04-18)
[1649] Added: Feature #4990 - Logs search should respect startDir.
[1646] Fixed: Bug #17048 - Error during startup if JSR-250 not supported.
[1639] Added: Upgraded Compass to version 2.2.0.
[1638] Added: Upgraded SVNKit to version 1.3.2.

[1628] Release 2.1.4 (2009-10-22)
[1625] Added: Feature #4864 - JMX exposure of cache statistics.
[1625] Added: Feature #4863 - Syntax highlighting of more file formats.
[1623] Added: Upgraded SVNKit to version 1.3.1.
       Added: Upgraded trilead-ssh2 to version build213-svnkit-1.3-patch.
[1622] Fixed: Bug #16111 - No result when searching for entries.

[1605] Release 2.1.3 (2009-06-16)
[1597] Fixed: Bug #15842 - High memory consumption when populating cache.

[1588] Release 2.1.2 (2009-06-07)
[1582] Added: Upgraded to SVNKit 1.3.0 (5903).
       Fixed: Bug #15779 - SVNKit serialization problem.